# deeprag

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  cli.py  pyproject.toml
.github/workflows/: ci.yml
deprag/: cli.py
deprag/configs/: config.py  defaults.yaml
deprag/configs/data/: hotpotqa.yaml  synthetic.yaml
deprag/configs/model/: agent_small.yaml  dsi_small.yaml
deprag/configs/train/: agent_ppo.yaml  dsi_pretrain.yaml  joint_finetune.yaml
deprag/data/: collators.py  docstore.py  loaders.py  prepare.py
deprag/eval/: baselines.py  evaluate.py  metrics.py  viz.py
deprag/models/: agent.py  dsi.py  policy_heads.py  tokenizer_utils.py
deprag/rl/: buffers.py  mdp.py  ppo.py  rewards.py  rollout.py
deprag/trainers/: train_agent.py  train_dsi.py  train_joint.py
deprag/utils/: distributed.py  io.py  logging.py  seed.py  training.py
docs/: architecture.md  faq.md  usage.md
notebooks/: 01_quickstart.ipynb  02_training_walkthrough.ipynb
scripts/: download_hotpotqa.sh  prepare_data.py  run_baseline.sh
tests/: conftest.py  test_cli.py
tests/data/: test_docstore.py  test_loaders.py
tests/fixtures/: hotpotqa_dev_sample.json  hotpotqa_dev_sample.jsonl  sample_docs.jsonl
tests/models/: test_agent.py  test_dsi.py
tests/rl/: test_mdp.py
tests/smoke/: test_smoke_train.py
